syntax = "proto3";

package TsmUnitmanRpc;

enum RpcMethod {
  Unknown = 0;
  Ping = 1;
  ListUnits = 2;
  StartUnit = 3;
  StopUnit = 4;
}

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
}

message ListUnitsRequest {
}

message ListUnitsResponse {
  repeated Unit units = 1;
}

message StartUnitRequest {
  string unit_name = 1;
}

message StartUnitResponse {
  string message = 1;
}

message StopUnitRequest {
  string unit_name = 1;
}

message StopUnitResponse {
  string message = 1;
}

message Unit {
  string name = 1;
  string executable = 2;
  repeated string arguments = 3;
  RestartPolicy restart_policy = 4;
  int32 uid = 5;
  int32 gid = 6;
  bool enabled = 7;
  ProbeState process_probe_state = 8;
  ProbeState liveness_probe_state = 9;
  int32 pid = 10;
  uint64 uptime = 11;
  UnitState state = 12;

  enum RestartPolicy {
    Always = 0;
    Never = 1;
    DisabledTemporarily = 2;
  }

  enum ProbeState {
    Undefined = 0;
    Alive = 1;
    Dead = 2;
  }

  enum UnitState {
    Starting = 0;
    Running = 1;
    RunningAndHealthy = 2;
    RunningButDegraded = 3;
    Stopping = 4;
    Stopped = 5;
  }
}
